# docker-boilerplate-python

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: app.py
app/any_module/: the_module.py
app/infrastructure/api/v1/: main.py
